# spf.rs

./: .vale.ini  Cargo.toml  README.md  letterO.spf
.ci/: build_tarballs.jl  get_coverage.jl  interpolate_colors.jl  release.jl
.github/workflows/: builder.yml  clippy.yml  coverage.yml  documentation.yml  documentation_badge.yml  documentation_coverage.yml  msrv.yml  rust.yml  tests.yml  vale.yml  wiki.yml
res/: sampleToyFont.spf
res/articles/: GettingStarted.md  GettingStartedInC.md  GettingStartedInRust.md  Home.md  InstallingSPFRS.md  LoggingAndDebuggingWithSPFRS.md  MiniquadIntegration.md  PrinterModuleAndTextRenderings.md  UsingSPFRSWithFFI.md
src/: articles.rs  byte.rs  c.rs  cache.rs  common.rs  core.rs  ergonomics.rs  lib.rs  log.rs  main.rs  printer.rs
src/articles/: miniquad_integration.rs
src/core/: bitmap.rs  bitmap_table.rs  byte.rs  character.rs  color_table.rs  composers.rs  deserialize.rs  helpers.rs  layout.rs  mod.rs  new_structure.rs  parsers.rs  pixmap_table.rs  serialize.rs  simplepixelfont.rs  structs.rs  tagging_stub.rs
src/core/table/: mod.rs
src/core/table/character/: deserialize.rs  mod.rs  serialize.rs
src/core/table/color/: mod.rs
src/core/table/pixmap/: deserialize.rs  mod.rs  serialize.rs
src/core/tables/: mod.rs
src/core/tables/character/: deserialize.rs  mod.rs  serialize.rs
src/core/tables/color/: mod.rs
src/core/tables/font/: deserialize.rs  mod.rs  serialize.rs
src/core/tables/pixmap/: deserialize.rs  mod.rs  serialize.rs
src/ergonomics/: mod.rs
src/ergonomics/builders/: character.rs  color.rs  mod.rs  pixmap.rs
src/ffi/: converters.rs  defaults.rs  engine.rs  free.rs  macros.rs  mod.rs
src/ffi/converters/: character.rs  character_table.rs  color.rs  color_table.rs  font.rs  font_table.rs  mod.rs  pixmap.rs  pixmap_table.rs
src/tag/: mod.rs
src/tagging/: mod.rs
tests/: integration_tests.rs
tests/common/: mod.rs
