[package]
name = "spf"
version = "0.7.0-alpha.0"
description = ".spf (Simple Pixel Font) file parser"
repository = "https://github.com/SimplePixelFont/spf.rs"
license = "Apache-2.0"
edition = "2021"
categories = ["parsing", "no-std"]

[lib]
name = "spf"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std", "log", "ffi"]
std = []
log = ["dep:log"]
# ergonomics = []
ffi = []
# articles = []

[dependencies]
log = { version = "0.4.27", optional = true }

[dev-dependencies]
env_logger = "0.11.8"
