[package]
name = "spf"
version = "0.7.2"
description = ".spf (Simple Pixel Font) file parser"
repository = "https://github.com/SimplePixelFont/spf.rs"
license = "Apache-2.0"
edition = "2021"
categories = ["parsing", "no-std"]
rust-version = "1.78.0"

[lib]
name = "spf"
path = "src/lib.rs"
crate-type = ["rlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std", "log", "ergonomics", "serde", "ffi", "articles", "tagging"]
std = []
log = ["dep:log"]
ergonomics = []
serde = ["dep:serde"]
ffi = []
articles = []
tagging = []

[dependencies]
log = { version = "0.4.27", optional = true }
serde = { version = "1.0.225", features = ["derive"], optional = true }

[dev-dependencies]
env_logger = "0.11.8"
